--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,10 @@
 *.wav
 profile.txt
 profile.json
+# OS/editor/cache
+.DS_Store
+__pycache__/
+*.pyc
+.ipynb_checkpoints/
+notebook_outputs/
+.venv/
